Add single investment stats and fix investment quantity